fix(profile-page): Align page title with the page and add hover effect in profile dropdown . (#335)
- Align page title with the page .
- Add hover effect in profile dropdown.
- Change the icon for inactive Trip Plannner.

[Delivers #161985207]

--- a/src/components/RolePanelHeader/RolePanelHeader.scss
+++ b/src/components/RolePanelHeader/RolePanelHeader.scss
@@ -3,6 +3,6 @@
   background-color: #f8f8f8;
   height: 100px;
   width: 100%;
-  padding: 0 25px;
+  padding: 0 25px 0 0;
   @import 'responsiveness';
 }
