--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -56,6 +56,15 @@
     }
 }
 
+.profile-sec{
+  display: inline-flex;
+}
+.dropdown-arrow{
+  display: flex;
+  flex-direction: column;
+  max-width: 32px;
+}
+
 .navbar {
     &__layout_header {
         height: auto;
@@ -161,9 +170,14 @@
             width: 30px;
         }
     }
+    &__link:hover{
+        background-color: #ededed;
+    }
+
     &__navbar-account {
         cursor: pointer;
-        margin: 5px;
+        margin: 5px 0px 5px 5px;
+
         @media (max-width: 479px) {
             height: 30px;
             width: 30px;
@@ -203,13 +217,12 @@
     &__mdl-list {
         position: relative;
         top: 5px;
-        left: 18px;
+        min-width: 150px;
+        max-width: 150px;
         background-color: #ffffff;
-        height: 84px;
-        width: 150px;
+        right: 130px;
         margin: 5px;
         color: #4F4F4F;
-        border-radius: 3px;
         height: auto;
         box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.2);
         border-radius: 2px;
@@ -222,13 +235,14 @@
         .border-line {
             box-sizing: border-box;
             height: 2px;
-            width: 150px;
+            width: 100%;
             border: 1px solid #E4E4E4;
         }
 
         #logout {
             height: 42px;
             padding-top: 8px;
+            padding-left: 6px;
         }
 
 
