--- a/src/views/Checklist/index.scss
+++ b/src/views/Checklist/index.scss
@@ -12,7 +12,7 @@
 
 .checklist-page {
   margin-bottom: 50px;
-  padding: 0 25px;
+
 
   #default-item-header {
     height: 20px;
